# tiro-stylus

./: .gitignore  CLAUDE.md  SOUL.md  main.py  pyproject.toml
scripts/: load_secrets.sh
src/tiro_stylus/: history.py  listener.py  main.py  runner.py  telegram.py
systemd/: tiro-stylus.service
