[project]
name = "tiro-stylus"
version = "0.1.0"
description = "Telegram-triggered Claude Code assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
tiro-stylus = "tiro_stylus.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiro_stylus"]
